ResoniteMario64/libsm64/Plugins/include/libsm64.h

struct SM64Surface
{
    int16_t type;
    int16_t force;
    uint16_t terrain;
    int32_t vertices[3][3];
};
struct SM64MarioInputs
{
    float camLookX, camLookZ;
    float stickX, stickY;
    uint8_t buttonA, buttonB, buttonZ;
};
struct SM64ObjectTransform
{
    float position[3];
    float eulerRotation[3];
};
struct SM64SurfaceObject
{
    struct SM64ObjectTransform transform;
    uint32_t surfaceCount;
    struct SM64Surface* surfaces;
};
struct SM64MarioState
{
    float position[3];
    float velocity[3];
    float faceAngle;
    int16_t health;
    uint32_t action;
    uint32_t flags;
    uint32_t particleFlags;
    int16_t invincTimer;
};
struct SM64MarioGeometryBuffers
{
    float* position;
    float* normal;
    float* color;
    float* uv;
    uint16_t numTrianglesUsed;
};
struct SM64FloorCollisionData
{
    float unused[4]; // possibly position data?
    float normalX;
    float normalY;
    float normalZ;
    float originOffset;
};
struct SM64SurfaceObjectTransform
{
    float aPosX, aPosY, aPosZ;
    float aVelX, aVelY, aVelZ;

    int16_t aFaceAnglePitch;
    int16_t aFaceAngleYaw;
    int16_t aFaceAngleRoll;

    int16_t aAngleVelPitch;
    int16_t aAngleVelYaw;
    int16_t aAngleVelRoll;
};
struct SM64SurfaceCollisionData
{
    int16_t type;
    int16_t force;
    int8_t flags;
    int8_t room;
    int32_t lowerY; // libsm64: 32 bit
    int32_t upperY; // libsm64: 32 bit
    int32_t vertex1[3]; // libsm64: 32 bit
    int32_t vertex2[3]; // libsm64: 32 bit
    int32_t vertex3[3]; // libsm64: 32 bit
    struct
    {
        float x;
        float y;
        float z;
    } normal;

    float originOffset;

    uint8_t isValid; // libsm64: added field
    struct SM64SurfaceObjectTransform* transform; // libsm64: added field
    uint16_t terrain; // libsm64: added field
};
extern SM64_LIB_FN uint32_t sm64_audio_tick(uint32_t numQueuedSamples, uint32_t numDesiredSamples, int16_t* audio_buffer);
extern SM64_LIB_FN void sm64_mario_delete(int32_t marioId);
extern SM64_LIB_FN void sm64_set_mario_action(int32_t marioId, uint32_t action);
extern SM64_LIB_FN void sm64_set_mario_state(int32_t marioId, uint32_t flags);
extern SM64_LIB_FN void sm64_set_mario_position(int32_t marioId, float x, float y, float z);
extern SM64_LIB_FN void sm64_set_mario_angle(int32_t marioId, float x, float y, float z);
extern SM64_LIB_FN void sm64_set_mario_faceangle(int32_t marioId, float y);
extern SM64_LIB_FN void sm64_set_mario_velocity(int32_t marioId, float x, float y, float z);
extern SM64_LIB_FN void sm64_set_mario_forward_velocity(int32_t marioId, float vel);
extern SM64_LIB_FN void sm64_set_mario_health(int32_t marioId, uint16_t health);
extern SM64_LIB_FN void sm64_mario_take_damage(int32_t marioId, uint32_t damage, uint32_t subtype, float x, float y, float z);
extern SM64_LIB_FN void sm64_mario_heal(int32_t marioId, uint8_t healCounter);
extern SM64_LIB_FN void sm64_mario_interact_cap(int32_t marioId, uint32_t capFlag, uint16_t capTime, uint8_t playMusic);
extern SM64_LIB_FN void sm64_mario_extend_cap(int32_t marioId, uint16_t capTime);
extern SM64_LIB_FN uint32_t sm64_surface_object_create(const struct SM64SurfaceObject* surfaceObject);
extern SM64_LIB_FN void sm64_surface_object_move(uint32_t objectId, const struct SM64ObjectTransform* transform);
extern SM64_LIB_FN void sm64_surface_object_delete(uint32_t objectId);
extern SM64_LIB_FN float sm64_surface_find_floor_height_and_data(float xPos, float yPos, float zPos, struct SM64FloorCollisionData** floorGeo);
extern SM64_LIB_FN float sm64_surface_find_floor_height(float x, float y, float z);
extern SM64_LIB_FN float sm64_surface_find_floor(float xPos, float yPos, float zPos, struct SM64SurfaceCollisionData** pfloor);
extern SM64_LIB_FN void sm64_play_sound(int32_t soundBits, float* pos);
extern SM64_LIB_FN void sm64_play_sound_global(int32_t soundBits);