ResoniteMario64/libsm64/Interop.cs


    public static uint AudioTick(short[] audioBuffer, uint numDesiredSamples, uint numQueuedSamples = 0)
    {
        GCHandle audioBufferPointer = GCHandle.Alloc(audioBuffer, GCHandleType.Pinned);
        uint numSamples = sm64_audio_tick(numQueuedSamples, numDesiredSamples, audioBufferPointer.AddrOfPinnedObject());
        audioBufferPointer.Free();
        return numSamples;
    }

    public static void PlaySoundGlobal(Sounds soundKey)
    {
        sm64_play_sound_global((int)SoundBank[soundKey]);
    }

    public static void PlaySound(Sounds soundKey, float3 unityPosition)
    {
        float3 marioPos = unityPosition.ToMarioPosition();
        float[] position = { marioPos.x, marioPos.y, marioPos.z };
        GCHandle posPointer = GCHandle.Alloc(position, GCHandleType.Pinned);

        sm64_play_sound((int)SoundBank[soundKey], posPointer.AddrOfPinnedObject());

        posPointer.Free();
    }

    public static void MarioDelete(uint marioId)
    {
        sm64_mario_delete(marioId);
    }

    public static void MarioTakeDamage(uint marioId, float3 unityPosition, uint damage)
    {
        float3 marioPos = unityPosition.ToMarioPosition();
        sm64_mario_take_damage(marioId, damage, 0, marioPos.x, marioPos.y, marioPos.z);
    }

    public static void MarioSetVelocity(uint marioId, SM64MarioState previousState, SM64MarioState currentState)
    {
        sm64_set_mario_velocity(marioId,
                                currentState.Position[0] - previousState.Position[0],
                                currentState.Position[1] - previousState.Position[1],
                                currentState.Position[2] - previousState.Position[2]);
    }

    public static void MarioSetVelocity(uint marioId, float3 unityVelocity)
    {
        float3 marioVelocity = unityVelocity.ToMarioPosition();
        sm64_set_mario_velocity(marioId, marioVelocity.x, marioVelocity.y, marioVelocity.z);
    }

    public static void MarioSetForwardVelocity(uint marioId, float unityVelocity)
    {
        sm64_set_mario_forward_velocity(marioId, unityVelocity * ScaleFactor);
    }

    public static void CreateAndAppendSurfaces(List<SM64Surface> outSurfaces, int[] triangles, float3[] vertices, SM64SurfaceType surfaceType, SM64TerrainType terrainType)
    {
        for (int i = 0; i < triangles.Length; i += 3)
        {
            outSurfaces.Add(new SM64Surface
            {
                Force = 0,
                Type = (short)surfaceType,
                Terrain = (ushort)terrainType,

                v0x = (int)(ScaleFactor * -vertices[triangles[i]].x),
                v0y = (int)(ScaleFactor * vertices[triangles[i]].y),
                v0z = (int)(ScaleFactor * vertices[triangles[i]].z),

                v1x = (int)(ScaleFactor * -vertices[triangles[i + 2]].x),
                v1y = (int)(ScaleFactor * vertices[triangles[i + 2]].y),
                v1z = (int)(ScaleFactor * vertices[triangles[i + 2]].z),

                v2x = (int)(ScaleFactor * -vertices[triangles[i + 1]].x),
                v2y = (int)(ScaleFactor * vertices[triangles[i + 1]].y),
                v2z = (int)(ScaleFactor * vertices[triangles[i + 1]].z)
            });
        }
    }

    public static float FindFloor(float3 pos, out SM64SurfaceCollisionData data)
    {
        float3 marioPos = pos.ToMarioPosition();
        IntPtr floorPtr;
        float floorHeightMario = sm64_surface_find_floor(marioPos.x, marioPos.y, marioPos.z, out floorPtr);
        if (floorPtr == IntPtr.Zero)
        {
            data = new SM64SurfaceCollisionData();
        }
        else
        {
            data = Marshal.PtrToStructure<SM64SurfaceCollisionData>(floorPtr);
        }
        return floorHeightMario / Interop.ScaleFactor;
    }
    
    public static float FindFloorHeight(float3 pos)
    {
        float3 marioPos = pos.ToMarioPosition();
        float floorHeightMario = sm64_surface_find_floor_height(marioPos.x, marioPos.y, marioPos.z);
        return floorHeightMario / Interop.ScaleFactor;
    }

    public static float FindFloorHeightAndData(float3 pos, out SM64FloorCollisionData data)
    {
        float3 marioPos = pos.ToMarioPosition();
        IntPtr floorGeo;
        float floorHeightMario = sm64_surface_find_floor_height_and_data(marioPos.x, marioPos.y, marioPos.z, out floorGeo);
        if (floorGeo == IntPtr.Zero)
        {
            data = new SM64FloorCollisionData();
        }
        else
        {
            data = Marshal.PtrToStructure<SM64FloorCollisionData>(floorGeo);
        }
        return floorHeightMario / Interop.ScaleFactor;
    }

    public static uint SurfaceObjectCreate(float3 position, floatQ rotation, SM64Surface[] surfaces)
    {
        GCHandle surfListHandle = GCHandle.Alloc(surfaces, GCHandleType.Pinned);
        SM64ObjectTransform t = SM64ObjectTransform.FromUnityWorld(position, rotation);

        SM64SurfaceObject surfObj = new SM64SurfaceObject
        {
            transform = t,
            surfaceCount = (uint)surfaces.Length,
            surfaces = surfListHandle.AddrOfPinnedObject()
        };

        uint result = sm64_surface_object_create(ref surfObj);

        surfListHandle.Free();

        return result;
    }

    public static void SurfaceObjectMove(uint id, float3 position, floatQ rotation)
    {
        SM64ObjectTransform t = SM64ObjectTransform.FromUnityWorld(position, rotation);
        sm64_surface_object_move(id, ref t);
    }

    public static void SurfaceObjectDelete(uint id)
    {
        sm64_surface_object_delete(id);
    }

    public static void MarioCap(uint marioId, StateFlag stateFlag, float durationSeconds, bool playCapMusic)
    {
        sm64_mario_interact_cap(marioId, (uint)stateFlag, (ushort)(durationSeconds * SecondsMultiplier), playCapMusic ? (byte)1 : (byte)0);
    }

    public static void MarioCapExtend(uint marioId, float durationSeconds)
    {
        sm64_mario_extend_cap(marioId, (ushort)(durationSeconds * SecondsMultiplier));
    }

    public static void MarioSetPosition(uint marioId, float3 pos)
    {
        float3 marioPos = pos.ToMarioPosition();
        sm64_set_mario_position(marioId, marioPos.x, marioPos.y, marioPos.z);
    }

    public static void MarioSetFaceAngle(uint marioId, floatQ rot)
    {
        float angleInDegrees = rot.EulerAngles.y;
        if (angleInDegrees > 180f)
        {
            angleInDegrees -= 360f;
        }

        sm64_set_mario_faceangle(marioId, -MathX.Deg2Rad * angleInDegrees);
    }

    public static void MarioSetRotation(uint marioId, floatQ rotation)
    {
        float3 marioRotation = rotation.EulerAngles.ToMarioRotation();
        sm64_set_mario_angle(marioId, marioRotation.x, marioRotation.y, marioRotation.z);
    }

    public static void MarioSetHealthPoints(uint marioId, float healthPoints)
    {
        sm64_set_mario_health(marioId, (ushort)(healthPoints * SM64HealthPerHealthPoint));
    }

    public static void MarioHeal(uint marioId, byte healthPoints)
    {
        // It was healing 0.25 with 1, so we multiplied by 4 EZ FIX
        sm64_mario_heal(marioId, (byte)(healthPoints * 4));
    }

    public static void MarioSetAction(uint marioId, ActionFlag actionFlag)
    {
        sm64_set_mario_action(marioId, (uint)actionFlag);
    }

    public static void MarioSetAction(uint marioId, uint actionFlags)
    {
        sm64_set_mario_action(marioId, actionFlags);
    }

    public static void MarioSetState(uint marioId, uint flags)
    {
        sm64_set_mario_state(marioId, flags);
    }
}

[StructLayout(LayoutKind.Sequential)]
public struct SM64Surface
{
    public short Type;
    public short Force;
    public ushort Terrain;
    public int v0x, v0y, v0z;
    public int v1x, v1y, v1z;
    public int v2x, v2y, v2z;
}

[StructLayout(LayoutKind.Sequential)]
public struct SM64MarioInputs
{
    public float camLookX, camLookZ;
    public float stickX, stickY;
    public byte buttonA, buttonB, buttonZ;
}

[StructLayout(LayoutKind.Sequential)]
public struct SM64MarioState
{
    [MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
    public float[] Position;

    [MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
    public float[] Velocity;

    public float FacingAngle;

    public short Health;

    public uint ActionFlags;
    public uint StateFlags;
    public uint ParticleFlags;
    public short InvincibleTimer;

    public float3 ScaledPosition => Position != null ? new float3(-Position[0], Position[1], Position[2]) / Interop.ScaleFactor : float3.Zero;
    public floatQ ScaledRotation => floatQ.Euler(0f, MathX.Repeat(-MathX.Rad2Deg * FacingAngle + 180f, 360f) - 180f, 0f);

    public float HealthPoints => Health / Interop.SM64HealthPerHealthPoint;

    public bool IsDead => Health < 1 * Interop.SM64HealthPerHealthPoint || (ActionFlags & (uint)ActionFlag.QuicksandDeath) == (uint)ActionFlag.QuicksandDeath;
    public bool IsAttacking => (ActionFlags & (uint)ActionFlag.Attacking) != 0;
    public bool IsFirstPerson => IsFlyingOrSwimming;
    public bool IsFlyingOrSwimming => (ActionFlags & (uint)ActionFlag.SwimmingOrFlying) != 0;
    public bool IsSwimming => (ActionFlags & (uint)ActionFlag.Swimming) != 0;
    public bool IsFlying => (ActionFlags & (uint)ActionFlag.Flying) != 0;
    public bool IsTeleporting => (ActionFlags & (uint)StateFlag.Teleporting) != 0;

    public bool IsWearingCap(MarioCapType capType)
    {
        return capType switch
        {
            MarioCapType.VanishCap => (StateFlags & (uint)StateFlag.VanishCap) != 0,
            MarioCapType.MetalCap  => (StateFlags & (uint)StateFlag.MetalCap) != 0,
            MarioCapType.WingCap   => (StateFlags & (uint)StateFlag.WingCap) != 0,
            _                      => capType == MarioCapType.NormalCap
        };
    }
}

[StructLayout(LayoutKind.Sequential)]
internal struct SM64MarioGeometryBuffers
{
    public IntPtr position;
    public IntPtr normal;
    public IntPtr color;
    public IntPtr uv;
    public ushort numTrianglesUsed;
}

[StructLayout(LayoutKind.Sequential)]
internal struct SM64ObjectTransform
{
    [MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
    private float[] Position;

    [MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
    private float[] EulerRotation;

    public static SM64ObjectTransform FromUnityWorld(float3 position, floatQ rotation)
    {
        return new SM64ObjectTransform
        {
            Position = VecToArr(position.ToMarioPosition()),
            EulerRotation = VecToArr(rotation.EulerAngles.ToMarioRotation())
        };

        float[] VecToArr(float3 v) => new[] { v.x, v.y, v.z };
    }
}

[StructLayout(LayoutKind.Sequential)]
public struct SM64SurfaceObjectTransform
{
    public float aPosX;
    public float aPosY;
    public float aPosZ;

    public float aVelX;
    public float aVelY;
    public float aVelZ;

    public short aFaceAnglePitch;
    public short aFaceAngleYaw;
    public short aFaceAngleRoll;

    public short aAngleVelPitch;
    public short aAngleVelYaw;
    public short aAngleVelRoll;
}

[StructLayout(LayoutKind.Sequential)]
internal struct SM64SurfaceObject
{
    public SM64ObjectTransform transform;
    public uint surfaceCount;
    public IntPtr surfaces;
}

[StructLayout(LayoutKind.Sequential)]
internal struct SM64SurfaceCollisionData
{
    public short type;
    public short force;
    public byte flags;
    public byte room;
    public int lowerY;
    public int upperY;

    [MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
    public int[] vertex1;

    [MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
    public int[] vertex2;

    [MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
    public int[] vertex3;

    public float3 normal;

    public float originOffset;

    public byte isValid;

    public IntPtr transform;

    public ushort terrain;
}
